Fix layout of shop gallery

--- a/meetpie/index.html
+++ b/meetpie/index.html
@@ -324,7 +324,7 @@ html, body {
 }
 .finder-tab .popup > .gallery {
   height: 200px;
-  width: 200%;
+  white-space: nowrap;
 }
 .finder-tab .popup > .gallery > img {
   height: 200px;
