Work around Chrome flexbox bugs

--- a/index.html
+++ b/index.html
@@ -79,15 +79,21 @@ document.getElementsByTagName('head')[0].appendChild(link);
             class="emoji">🗼</span><figcaption></figcaption></figure></li>
   <li class="fragment fade-in"><figure><img
       src="img/firefox-logo.svg"><figcaption>2004~</figcaption></figure></li>
-  <li class="fragment fade-in"><figure><img src="img/csswg-2.jpg" width="250"><figcaption>W3C CSS Working Group 2015~</figcaption></figure></li>
-  <li class="fragment fade-in" style="font-size: 90px">🏊,🏄</li>
+  <li class="fragment fade-in"><figure><img src="img/csswg-2.jpg"><figcaption>W3C CSS Working Group 2015~</figcaption></figure></li>
+  <li class="fragment fade-in" style="font-size: 90px">🏊 🏄</li>
   <li class="fragment fade-in"><span class="emoji">🍣</span></li>
 </ul>
 </section>
 
 <section id="about-meat-pie-slide" data-background-image="img/punk-doily-1.jpg">
-  <p class="full-page-source">Source: <a
-    href="https://twitter.com/PDoily/status/1104208565290467328">@PDoily</a></p>
+  <p class="full-page-source">
+    <span>
+      Source:
+      <a href="https://twitter.com/PDoily/status/1104208565290467328">
+        @PDoily
+      </a>
+    </span>
+  </p>
 </section>
 
 <section id="css-transitions-section" class="section-title"
