--- a/index.html
+++ b/index.html
@@ -96,6 +96,118 @@ document.getElementsByTagName('head')[0].appendChild(link);
   </p>
 </section>
 
+<section id="three-days-of-pie-slide" class="fit-picture">
+  <img src="img/3-days-of-pie.jpg">
+</section>
+
+<section id="app-intro-slide">
+<h2 class="svg smallerer">
+  <svg><text y="1em" x="3px">Introducing <tspan style="text-decoration:
+  line-through">Meat</tspan> &ldquo;Meet Pie&rdquo;</text></svg>
+</h2>
+<div class="side-by-side">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 862 1754">
+    <image href="img/screenshot-feed.png" width="862" height="1754"/>
+    <rect x="55.5" y="209" width="750" height="1335"
+      fill="hsl(106.5, 46.1%, 47.3%)" />
+    <text x="100" y="700" dx="0,-30,-20,-30">Meet</text>
+    <text x="380" y="860" dx="0,-40,-30" class="white">Pie</text>
+    <g transform="translate(200 850) scale(7)">
+      <g class="jiggle">
+        <path fill="#bdc1c6" d="M8.9 37.9L12.1 48H52l2.9-10.1-3.6-2.2-2.7 3.2-4.7-.2-4.5-3-2.7 3.2-4.2 1.2-4.9-1.1-3.1-2.7-2.4 1.8-2.7 1-5-1.1-1.8-2.3z"/>
+        <path d="M8.1 37.9s-3.4-.6-3.6-1-1.9-4.6-1.9-4.6l3.3-4 3-.7 3.9-5.4 8.9-4.9 8.6-1 9.9.6 7.1 3.1 4.8 4.1 2.4 3.1.4 1.2 4.6.8 1.8 4.2-2.4 3.9-4 .6-3.6-2.2-1.5 1.4-3.8 1.6h-3.6l-3-3.1-2.8 3.3-5.3 1-3.7-.9-2.6-3.3-2.3 1.9-4.7 1.5-2-.7-3.4-2.7-2.5 2-2 .2z" fill="#b56f1c"/>
+        <path d="M12 48.6c-.3 0-.5-.2-.6-.4l-2.9-9.6H8a5.6 5.6 0 1 1 0-11.2h.5l.1-.2C11.8 20 21 15.4 32 15.4S52.2 20 55.4 27.2l.1.2h.5a5.6 5.6 0 1 1 0 11.2h-.5l-2.9 9.6c-.1.3-.3.4-.6.4H12zm.1-11.8c-.6.6-1.3 1.1-2.1 1.4l-.3.1 2.8 9.1h39.1l2.7-9.1-.3-.1c-.8-.3-1.5-.8-2.1-1.4l-.3-.3-.3.4c-.3.3-.6.7-.9.9a7.5 7.5 0 0 1-10.5-.7l-.3-.4-.3.4c-.5.6-1 1.1-1.6 1.6a9.99 9.99 0 0 1-5.7 1.9c-2.9 0-5.5-1.3-7.3-3.5l-.3-.4-.3.3-.9.9a7.06 7.06 0 0 1-4.7 1.6c-2.3 0-4.4-1-5.8-2.8l-.3-.4-.3.5zm12.4-2c.2 0 .4.2.5.4a7.5 7.5 0 0 0 6.7 4.3h.5c2.9 0 5.5-1.7 6.7-4.3.1-.2.3-.4.5-.4s.5.1.6.3a5.89 5.89 0 0 0 5.4 3.3c2.3 0 4.4-1.3 5.5-3.4.1-.2.3-.4.5-.4s.4.1.5.3a4.7 4.7 0 0 0 3.1 2.4c.3.1.5.1.8.1 2.4 0 4.4-2 4.4-4.4 0-2.4-2-4.4-4.4-4.4-.3 0-.5 0-.8.1h-.1c-.2 0-.5-.2-.6-.4C51.8 21.2 43 16.6 32 16.6S12.2 21.2 9.5 28.3c-.1.2-.3.4-.6.4h-.1c-.3-.1-.5-.1-.8-.1-2.4 0-4.4 2-4.4 4.4 0 2.4 2 4.4 4.4 4.4.3 0 .5 0 .8-.1 1.3-.3 2.5-1.1 3.1-2.4.1-.2.3-.3.5-.3s.5.2.5.4c1 2.1 3.1 3.4 5.3 3.4h.3c2.3 0 4.3-1.3 5.3-3.3.3-.2.5-.3.7-.3z"/>
+        <path d="M32 26.6c-.3 0-.6-.3-.6-.6v-4c0-.3.3-.6.6-.6s.6.3.6.6v4c0 .3-.3.6-.6.6zM24 26.6c-.1 0-.2 0-.3-.1-.3-.2-.4-.5-.3-.8l2-4c.1-.2.3-.3.5-.3.1 0 .2 0 .3.1.3.1.4.5.3.8l-2 4c-.1.2-.3.3-.5.3zM40 26.6c-.2 0-.4-.1-.5-.3l-2-4c-.1-.3 0-.6.3-.7.1-.1.2-.1.3-.1.2 0 .4.1.5.3l2 4c.1.3 0 .7-.3.8H40zM15 44.6c-.3 0-.6-.3-.6-.6s.3-.6.6-.6h2c.3 0 .6.3.6.6s-.3.6-.6.6h-2zM21 44.6c-.3 0-.6-.3-.6-.6s.3-.6.6-.6h8c.3 0 .6.3.6.6s-.3.6-.6.6h-8z"/>
+      </g>
+    </g>
+  </svg>
+  <ul class="pie-list">
+    <li>The first social network for meat pie lovers!</li>
+    <li>Latest (p)AI technology</li>
+    <li>PWA (Pie Web App)</li>
+  </ul>
+</div>
+</section>
+
+<style>
+#app-intro-slide .side-by-side {
+  display: flex;
+  max-height: 500px;
+}
+#app-intro-slide .side-by-side > svg {
+  border: 0;
+  filter: drop-shadow(1px 6px 3px #888);
+  transform: rotate(-15deg);
+}
+#app-intro-slide .side-by-side > svg text {
+  fill: var(--pink);
+  stroke: var(--black);
+  stroke-width: 10px;
+  font-size: 250px;
+  font-family: Sniglet, sans-serif;
+  font-weight: 800;
+}
+#app-intro-slide .side-by-side > svg text.white {
+  fill: white;
+}
+#app-intro-slide .side-by-side .jiggle {
+  animation: jiggle 2s infinite;
+  transform-origin: 50% 50%;
+  transform-box: fill-box;
+}
+@keyframes jiggle {
+  15% {
+    transform: translate(0,-10px);
+  }
+  20% {
+    transform: translate(0,-10px);
+  }
+  22% {
+    transform: translate(0,-10px) rotate(-10deg);
+  }
+  26% {
+    transform: translate(0,-10px) rotate(10deg);
+  }
+  30% {
+    transform: translate(0,-10px) rotate(-10deg);
+  }
+  32% {
+    transform: translate(0,-10px) rotate(0deg);
+  }
+  37% {
+    transform: translate(0,-10px) rotate(0deg);
+  }
+  52% {
+    transform: translate(0,0px) rotate(0deg);
+  }
+}
+#app-intro-slide .side-by-side > ul li {
+  margin-bottom: .5em;
+}
+</style>
+
+<section id="app-lineup-slide" data-background="#5ab041">
+<div class="lineup">
+  <img src="img/screenshot-feed.png">
+  <img src="img/screenshot-poll.png">
+  <img src="img/screenshot-map-with-popup.png">
+</div>
+</section>
+
+<style>
+#app-lineup-slide .lineup {
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  justify-content: space-around;
+}
+#app-lineup-slide .lineup > img {
+  max-height: 600px;
+  border: none;
+  background: transparent;
+  box-shadow: none;
+}
+</style>
+
 <section id="css-transitions-section" class="section-title"
   data-background="#5ab041">
 <h1 class="svg">
