--- a/index.html
+++ b/index.html
@@ -132,9 +132,12 @@ document.getElementsByTagName('head')[0].appendChild(link);
 <style>
 #app-intro-slide .side-by-side {
   display: flex;
-  max-height: 500px;
+  height: 450px;
 }
 #app-intro-slide .side-by-side > svg {
+  flex: 1 0 auto;
+  width: 300px;
+  padding: .5em;
   border: 0;
   filter: drop-shadow(1px 6px 3px #888);
   transform: rotate(-15deg);
