Fix animation to work with Safari

--- a/index.html
+++ b/index.html
@@ -1656,7 +1656,7 @@ button.onclick = () => {
 }
 @keyframes fancy {
   0%   { transform: none; }
-  50%  { transform: scale(1.5); }
+  50%  { transform: scale(1.5) rotate(0deg); }
   90%  { transform: scale(1.5) rotate(360deg); }
   100% { transform: scale(1.5) rotate(360deg); }
 }
